# bevy_input_mapper

./: Cargo.toml  LICENSE  README.md  justfile
examples/: binding_with_code.rs  remapping_egui.rs
src/: lib.rs
src/input/: events.rs  gamepad.rs  keyboard.rs  mod.rs  mouse.rs  state.rs
