[package]
name = "bevy_input_mapper"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/atahabaki/bevy_input_mapper"
description = "Input binding has never been easier: a Bevy game engine plugin designed with stunning simplicity in mind."
keywords = ["bevy", "plugin", "binding", "inputmap"]
categories = ["game-development"]

[features]
# This is experimental.
bind_macro = []

[dependencies]
bevy = "0.11.2"
